- add wifi-scripts from december 2019 - added cross-traffic ge-model loss16 mininet networks - added DRR mininet networks

--- a/experiments/geni-experiments/results/eval_plot.ipynb
+++ b/experiments/geni-experiments/results/eval_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -113,41 +113,143 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".\\20191207-004432_GENI_107400msgs-100-100-N\\\n",
+      ".\\20191211-054105_GENI-6000msgs-100-100ms-N-ephemeral\\\n",
       "Sent by Client: Received by Server:\n",
-      " 107648 107648\n",
+      " 6618 6016\n",
       "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
-      " 253 0 253\n",
-      "Retransmissions rate: 0.24 %\n",
-      ".\\20191207-131731_GENI_107400msgs_100-100-L\\\n",
+      " 618 189 429\n",
+      "Retransmissions rate: 9.34 %\n",
+      "Successful Retransmissions rate: 69.42 %\n",
+      "max: 54.378 min: 0.0 mean: 27.54093178379865 var: 3.279860480903\n",
+      "\n",
+      "\n",
+      ".\\20191211-055329_GENI-6000msgs-100-100ms-L-ephemeral\\\n",
       "Sent by Client: Received by Server:\n",
-      " 107773 107773\n",
+      " 6401 6019\n",
       "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
-      " 392 0 392\n",
-      "Retransmissions rate: 0.36 %\n",
-      ".\\20191207-165925_GENI_107400msgs_100-100-F\\\n",
+      " 401 111 290\n",
+      "Retransmissions rate: 6.26 %\n",
+      "Successful Retransmissions rate: 72.32 %\n",
+      "max: 55.132 min: 0.0 mean: 27.840933606441585 var: 3.9026847782982625\n",
+      "\n",
+      "\n",
+      ".\\20191211-060634_GENI-6000msgs-100-100ms-F-ephemeral\\\n",
       "Sent by Client: Received by Server:\n",
-      " 107753 107753\n",
+      " 6173 5845\n",
       "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
-      " 373 0 373\n",
-      "Retransmissions rate: 0.35 %\n"
+      " 174 0 141\n",
+      "Retransmissions rate: 2.82 %\n",
+      "Successful Retransmissions rate: 81.03 %\n",
+      "max: 54.806 min: 0.0 mean: 27.786501266891953 var: 2.668497895253903\n",
+      "\n",
+      "\n",
+      ".\\20191211-071903_GENI-36000msgs-100-100ms-N-ephemeral\\\n",
+      "Sent by Client: Received by Server:\n",
+      " 39222 36084\n",
+      "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
+      " 3230 1034 2196\n",
+      "Retransmissions rate: 8.24 %\n",
+      "Successful Retransmissions rate: 67.99 %\n",
+      "max: 152.157 min: 0.0 mean: 27.563697658800578 var: 3.645618524029401\n",
+      "\n",
+      "\n",
+      ".\\20191211-081927_GENI-36000msgs-100-100ms-L-ephemeral\\\n",
+      "Sent by Client: Received by Server:\n",
+      " 39184 36082\n",
+      "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
+      " 3186 1020 2166\n",
+      "Retransmissions rate: 8.13 %\n",
+      "Successful Retransmissions rate: 67.98 %\n",
+      "max: 66.667 min: 0.0 mean: 29.323607338215982 var: 6.787123273414433\n",
+      "\n",
+      "\n",
+      ".\\20191211-092745_GENI-36000msgs-100-100ms-F-ephemeral\\\n",
+      "Sent by Client: Received by Server:\n",
+      " 37131 34633\n",
+      "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
+      " 1131 1 856\n",
+      "Retransmissions rate: 3.05 %\n",
+      "Successful Retransmissions rate: 75.69 %\n",
+      "max: 77.262 min: 0.0 mean: 29.31534327014078 var: 5.895220459357778\n",
+      "\n",
+      "\n",
+      ".\\20191211-103003_GENI-36000msgs-100-100ms-N-ephemeral\\\n",
+      "Sent by Client: Received by Server:\n",
+      " 39690 36073\n",
+      "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
+      " 3721 1258 2463\n",
+      "Retransmissions rate: 9.38 %\n",
+      "Successful Retransmissions rate: 66.19 %\n",
+      "max: 57.02 min: 0.0 mean: 27.55175001146595 var: 3.04670225203257\n",
+      "\n",
+      "\n",
+      ".\\20191211-113421_GENI-36000msgs-100-100ms-L-ephemeral\\\n",
+      "Sent by Client: Received by Server:\n",
+      " 39770 36108\n",
+      "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
+      " 3781 1311 2470\n",
+      "Retransmissions rate: 9.51 %\n",
+      "Successful Retransmissions rate: 65.33 %\n",
+      "max: 69.885 min: 0.0 mean: 30.165690539952273 var: 8.735414986863818\n",
+      "\n",
+      "\n",
+      ".\\20191211-123435_GENI-36000msgs-100-100ms-F-ephemeral\\\n",
+      "Sent by Client: Received by Server:\n",
+      " 37166 34407\n",
+      "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
+      " 1168 2 854\n",
+      "Retransmissions rate: 3.14 %\n",
+      "Successful Retransmissions rate: 73.12 %\n",
+      "max: 215.766 min: 0.0 mean: 29.431715255243937 var: 8.338857329741034\n",
+      "\n",
+      "\n",
+      ".\\20191211-133920_GENI-36000msgs-100-100ms-N-ephemeral\\\n",
+      "Sent by Client: Received by Server:\n",
+      " 39221 36093\n",
+      "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
+      " 3234 983 2251\n",
+      "Retransmissions rate: 8.25 %\n",
+      "Successful Retransmissions rate: 69.6 %\n",
+      "max: 93.296 min: 0.0 mean: 27.57256429217149 var: 4.150272569067506\n",
+      "\n",
+      "\n",
+      ".\\20191211-144358_GENI-36000msgs-100-100ms-L-ephemeral\\\n",
+      "Sent by Client: Received by Server:\n",
+      " 39281 36075\n",
+      "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
+      " 3283 1055 2226\n",
+      "Retransmissions rate: 8.36 %\n",
+      "Successful Retransmissions rate: 67.8 %\n",
+      "max: 97.507 min: 0.0 mean: 29.314167584706404 var: 5.869390944558142\n",
+      "\n",
+      "\n",
+      ".\\20191211-155501_GENI-36000msgs-100-100ms-F-ephemeral\\\n",
+      "Sent by Client: Received by Server:\n",
+      " 37190 34636\n",
+      "Retransmissions by Client: Re-Retransmissions: Successful Retransmissions: \n",
+      " 1195 2 903\n",
+      "Retransmissions rate: 3.21 %\n",
+      "Successful Retransmissions rate: 75.56 %\n",
+      "max: 81.058 min: 0.0 mean: 29.34971074684569 var: 6.138454431353134\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ff63a31828>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x20473f13748>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAANgAAACJCAYAAABO8va/AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAB+JJREFUeJzt3b9vG/cdxvFHRWM0QHTy0qm4DB5FerInzh6oImkyNKa6\nyQhobRaQSECHwoPgoZDU/gEiAhgdXJ1bGE4LiPwHzMmayPNmDzx36qKjAiRIhm8HVRfJP0ieeJ87\n/ni/AAI68iB+v6Ie8O5493DBOecEwMQvih4AMMsIGGCIgAGGCBhgiIABhggYYOiXgx7s9/vqdrsK\nw1D1ev3CcqlUku/72tjYULlcVr1e19LSkoIgkO/7yW3QcqlUGjrAo6OjzCYLWLpx48bbd7oher2e\n29nZcc45d3Bw4Hq9nnPOubW1Ndfr9Vwcx8m6+/v7yfLOzs7Q5VE8f/58pPWykvfzFWHW51jE/N73\nnKk2EWu1mnzfVxiG8n1fktRsNhUEgcIwVKfTked5kqQoioYuA7PuUvtgh4eH2tzclO/7qtVqqtVq\nCoJA0ulmpSSdnJyMtAzMsoH7YO/SarW0vr6uOI7VbDa1srIiz/N0fHys69evK45jeZ6nxcXFocuj\nyns/bB72+2Z9jpMyv6EBa7fbevHihaIoUhiG2tvbk+/7Wl5e1urqqrrdrqIo0tbWVnKQw/M8ra+v\nJwc13rc8qnfuPBo5OjrK9fmslctlhWE4cJ1SqaRut5vTiOwV8Rq+N9A57wumxkGO7H3y1dOih2Bq\nag9yAEiHgAGGCBhgiIABhggYYIiAAYYIGGCIgAGGCBhgiIABhggYYIiAAYYIGGAodSdHms6NLDo5\ngGk2MGCe58n3fT179kySFASBarWaPM/T7u6url69OtYyAcOsS7WJmLZzg04OzLvU+2BpOzfo5MA8\nS9XJkbZzg06OyTXrc5yU+aXq5Dhrjxq1c4NOjgn16PVMz5FOjhTo5MgenRz5PSefgwGGCBhgiIAB\nhggYYIiAAYYIGGCIgAGGCBhgiIABhggYYIiAAYYIGGCIgAGGCBhgKNUFl61WS/v7+1paWpIkbW9v\na2NjQ+VyWfV6PfmOZkpvgFOpAub7vp48eaJ+v590ajx8+DDp2Wg0GpTeAOek2kQ8C0S73U5+bjab\nCoJAYRhSegO8IdU7mPRzaY10+o5Wq9UkSffv308e9zxPJycnWlxcHLg8Kjo5Rvfnf/5HP/zohq73\n6dffvvexX11Z0B9//5ssh5W7SXkNUwes3W4n70JBEGhlZUWe5+n4+Nis9IZOjtH98Oi1/v2Xzwau\nM2yOn3797VT/DSapkyN1wOI4lu/7kqRKpaJut6soirS1tZUc5Mi69AaYVqkDdrZJKCk5GnhevV5P\ntQzMMj4HAwwRMMAQAQMMETDAEAEDDBEwTL1yuayFhYXkdvPmzQvL5XK5sLERMEy9brcr51xy++Sr\npxeWu91uYWMjYIAhAgYYImCAIQIGGEp9LiIm25e9f+nZZ38but6zQb/jylVJg8/Ix2gI2Iz55uPf\nZXK5yudZD2xOpQpYFEVjdXDQyYF5k/odbJwODjo5MG9SH+QYp4ODTg7Mm9StUuN0cNDJkY9Rxj9s\nnXn4G+QhVcDG7eCgkyMHj14PHf/QOY7wOyZaAePPpJNj3A4OOjkwb1JvIo7bwUEnB+YJZ3IAhvig\nGVPnD3861Hff/zRwnUHFqpL00Ycf6O8PfpvlsN6JgM2gYf9ckqRHr9/70EcffpDhaLL33fc/DTxb\nZZQDVSP9jTJAwGbMsNOkpNN/rlHWw/jYBwMMETDAEAEDDBEwwBAHOTB1RrmodNAFpVJ+F5USMEyd\nYReVjnqYPo+LStlEBAwRMMAQm4iYSkPPxBhwpoqU39kqqQLW7/fV7XYVhqFKpZJ83x+ro4PKAFzG\nsLNQJulMlVQBazabqlQqqlQqunPnjra3t8fq6Mg7YE+/+FK//vF46HqDjkD998pVff6Pb7IbFMZW\nLpcVhuGF+xb++vPPpVKpsH76VAE7qwsIwzC5LqzZbEo6nWSn00mu94qiSFEUDVzO2yjBmPormufQ\nm+GZpNfwUvtgh4eH2tzclOd5Y3V0jIpOjuzN+hwnZX6pA9ZqtbS+vq44jtVsNsfq6BgVnRwZm/bO\njSGKeA0z6eRotVra29uT7/taXl7W6urqWB0dwKxLFbBqtapqtXrhvnE7OoBZxgfNgCECBhgiYIAh\nAgYYImCAIQIGGCJggCECBhgiYIAhAgYYImCAIQIGGCJggKHcS2/6/T69HJgbub+DBUGgWq2marWq\nw8PDvJ8eyFXuAet0OklJThG9HECeCulFTNvLQSfH5d2+fVuvXr166/7zrUvXrl3T48ePcxyVvUl5\nDXMP2GV6OejkuLyXL1++dd+szfFNU9vJkYVarUYvB+ZG7gHzPI9eDswNPgcDDC0451zRgxhkUnZW\ngWHetd838QEDphmbiIAhAgYYImCAIQIGGCJgOv2+s1u3biVf4tZoNLS7u1vwqLJ1Nsd2u130UEyc\nn1+r1dK9e/eKHtIpB+ecc81m062trTnnnIvj2PV6vYJHlL2z+c2qs/n1ej3X6/VcHMcFj8g53sH+\n7+zLBBuNRtFDwSXFcaxWq6VGoyHf95OrNopEwM6pVqvqdDqFfZ9vnvr9ftFDyNzS0pKq1aoqlUrR\nQ0kQsDc8ePBAe3t7RQ/D3Kzui0l66zvsikTAdPrPdnBwkFyndvfu3aKHlLkwDBVFkdrttoIgmLmr\nyc/Pb5JwqhRgiHcwwBABAwwRMMAQAQMMETDAEAEDDBEwwBABAwz9Dx62l/gidCugAAAAAElFTkSu\nQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAANIAAACJCAYAAABZ0GZ2AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACKFJREFUeJzt3b9v2+gZB/Cvit6hB5zp/AF9O2QMmSmemDWDHCS9TpHb\nyUHheEoMJNbWGAclk+V2j4UiQYdUzBAkPUDSP3Cc7MnkmAxi/gBTOeCGG94OhghRtig5eSj++n4A\n4ULmhfW+vnxNmuLDp6a11iCir/K7rCdAVAYMEpEABolIAINEJIBBIhLAIBEJ+H3WEwCA4+PjrKdA\ntJAbN25cuD8XQQJmTzAtx8fHS3/PZSr7+oDlrzHpBz5P7YgEMEhEAhgkIgEMUklYloVarRa91tbW\nYtu1Wg2WZWU9zdJKvNgwGo3geR5834dpmrBtG77vIwxDAIBt2xeOU0phZ2cHlmVha2sLSqn0V1Jx\nnufFtu8+eY+f/vlDRrOpnsQg9ft92LYN27Zx//59jEYjKKVg2zYcx5k5rtVq4dWrVzAMI/UFEOVB\nYpAajQYAwPf9KECbm5uwLAu7u7szxwFn4QLOTjlM00xl8kR5UVukHqndbmN7extBEAAAXNfF6ekp\nms3mheMmj0R7e3totVqJX58fyMr78fUn/Pi3P2Y9jdKZ+bmVnqPf7+swDPVwONT7+/vR/sk/T4/r\ndrs6DEOttdYPHz6c9xb66Oho7hhpWbznMt15/C7rKYgzTVMDmPkyTTPV90/6N5N4ajcYDHBwcACl\nFK5du4bbt29jMBhAKYWbN28iCIJoe3LcxsYGPM9DEATnjlpEXyrPF1QSg1Sv11Gv12P7pn/f2dra\nisZO4pU6qhJ+jkQkgEEiEsAgEQlgkIgEMEhEAhgkIgEMEpEABolIAINEJIBBIhLAIBEJYJCIBIiV\nmjuOA6VU9JrcZmEflZ1IqbnjOGg0GjAMA+12G1euXIltM0hUdomndo1GA0qpWKn506dPsbe3h/X1\n9WjcyclJVBUbBMG5baKyW+iRxb1eD7u7uwiCAM+ePYPrunjx4kWsaG80GsEwDHz+/BkrKyux7UVk\nUW5e9hL3sq8PyM8a5wZpMBhge3sbYRii1+uh2WzCNE202+1ozPXr1xGGIQzDwMrKyrntRfDZ38Je\nfyr3+oClrzEptCKl5o1GA47jwDAMbG9vRxcbxttEZSdWaj7+7/R+oirg50hEAhgkIgEMEpEABolI\nAINEJIBBIhLAIBEJYJCIBDBIRAIYJCIBDBKRgIXKKCh//vqPHn759bfEMXefvE/8+++/+wb/fX5b\nclqVdalS89FohMPDQ6yurgIAXr58CeDsLvHJ/a1Wi13NU/bLr78lNtlapExkXtBocZcqNd/d3cXb\nt28xGo1ila9KqXP72dWcvlaRjrqX6mo+LqFwXTdWXjG9PwgCdjWnr1ako+6lSs2Bs9O9i0zuV0pF\nIVykqznAUvMvMW/+i6wv79+DoqzxUqXmhmHAdd0LT9km9zuOg/X1dRiGgdPT04UmwlLzS5pTZr3Q\n+vJejp6zNSYFMvHy97jUfGdnB91uFwAQhmF0USEIAnQ6nXP7bduG53lwHIddzakSLl1qPj5lA85O\n4cYl5dP7eaWOqoQfyBIJYJCIBFQmSJZloVarRa+1tbXYtmVZWU+RCqwyQfI8D1rr6HXn8bvYtud5\nWU+RCqwyQSJKE4NEJIBBIhLAMoqC+vvwf/j5h/8kjvl53tf49gqA2feyZa1Ia2SQCurff/qzyA2d\nf5GemKAirZGndkQCGCQiAQwSkQCRUvMgCGKl5aurq+xqTpUiUmoOxEvLO50Ou5pTpVyqq/lkSfl0\nOPr9PhzHge/77GpOlSNSaj5dWj4ex67m6SpKGfbXKMoaRUrNp0vLi9DVPPdl1vPkrAw7FTlbo1hX\n82aziTAMo+rXcVfzer0Oz/MQBAGazWZ0sYFdzelrzX0K0OtPiX/9/XffCM5mtprWWi/lnRJk8SCS\nu0/eJ35qnncSj5kq+pNWl/3/MOnfKW8RKqh5/4CK/oOiaPiBLJGAUh6RFnnULZB8elT00x5arlIG\nad6jboH5v5fxAfN0GTy1IxLAIBEJYJCIBDBIRAIYJCIBDBKRgFJe/l7k6TNA8hNo8v6EHcqXUgZp\n3tNngMU+R8rzE3YoX0RKzafHKaXY1ZwqRaTUfHpcq9ViV3OqFJGu5tPjALCrOVWKWFfzyXGGYWTe\n1Xyhe+USisL+8G0t92XY8xR9/ovIyxrFuppPjuv3+5l2Nf9pga9V+nqdvJeRS1jyGlMvNVdKxcZt\nbGzESs+Jyk6sq/n0OF6poyrhnQ1EAhgkIgEMEpEABolIAINEJIBBIhLAIBEJYJCIBDBIRAIYJCIB\nDBKRAAaJSIBYqflkF3OlFLuaL5llWfB9P7av9q/4GNM04XneEmdVITpBt9vVw+FQa6315uam9jxP\na611GIbRn7XW+vDwUIdhqLXWen9//9z2PEdHR3PHSLvz+N3S33OZsvieps00TQ1g5ss0zVTfP+l7\nKtLVfLqLObuaUxo8z4PWOnodHR3FtrM82oqVmk92MV9ZWcldV/N79+7h48ePsX2Tpz5Xr17Fmzdv\nUp3DsuWlDDtNeVmjSKn5dBfzPHY1//DhQ2w7i761y1T29QHLX2PqpeaNRiPWxXx8sYFdzakqKtvV\nvOw/scu+PiCbI9Ks9+PnSEQCcnNEIiqCWUekXASJqOh4akckgEEiEsAgEQlgkIgEVCpIvu/j1q1b\n0V3SnU4H7XY741nJGq/Rdd2sp5KKyfUNBgM8evQo6ymdSfV22Rzq9/t6c3NTa312F/v47vYyGa+v\nrMbrGw6HejgcRpUGWarUEQlA1Lup0+lkPRX6QmEYYjAYoNPpQCmVi86QlQsScNY54+TkpBJFbkmN\n4YpqdXUV9Xodtm1nPZVIJYMEAM+fP8fBwUHW00hdWX9XAs63EspSpYLkui663W5UK/XgwYOspyTO\n930EQQDXdeE4Dnq9XtZTEjW5vjzhLUJEAip1RCJKC4NEJIBBIhLAIBEJYJCIBDBIRAIYJCIBDBKR\ngP8D8uIiULeHSTIAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1ff639a95f8>"
+       "<matplotlib.figure.Figure at 0x204740a9080>"
       ]
      },
      "metadata": {},
@@ -157,7 +259,7 @@
    "source": [
     "# GENI\n",
     "dfAll = pd.DataFrame()\n",
-    "for f in glob.iglob('./*201912*107400*/', recursive=True): # /*directoryRegExp*/ to reduce output (long runtime)\n",
+    "for f in glob.iglob('./*201912*/', recursive=True): # /*directoryRegExp*/ to reduce output (long runtime)\n",
     "    dfapp = pd.read_csv(f+'serverAppOutput', delim_whitespace=True ,names = \n",
     "                                        ['seconds_offset', 'streamid', 'length', 'msg_number', 'onewaydelay'])\n",
     "    dfstream = pd.read_csv(f+'serverStreamOutput', delim_whitespace=True ,names = \n",
@@ -202,9 +304,13 @@
     "    print('Retransmissions by Client:', 'Re-Retransmissions:', 'Successful Retransmissions: \\n',\n",
     "          len(retryList), len(retryList)-len(retryWithoutDuplicates), len(arrivedRetransmits))\n",
     "    print('Retransmissions rate:', round((len(retryList)/msgs_sent)*100, 2), '%')\n",
+    "    print('Successful Retransmissions rate:', round((len(arrivedRetransmits)/len(retryList))*100, 2), '%')\n",
     "    \n",
+    "    dfkpi['crtt'] = dfkpi.crtt.apply(lambda x: x / 1000) # from us to ms\n",
     "    \n",
     "    dfkpi.index = range(len(dfkpi))\n",
+    "    \n",
+    "    print('max:', dfkpi.crtt.max(),'min:', dfkpi.crtt.min(),'mean:', dfkpi.crtt.mean(), 'var:', dfkpi.crtt.var())\n",
     "\n",
     "    if '-N' in f:\n",
     "        dfAll['N'] = dfkpi['crtt']\n",
@@ -212,6 +318,8 @@
     "        dfAll['L'] = dfkpi['crtt']\n",
     "    if '-F' in f:\n",
     "        dfAll['F'] = dfkpi['crtt']\n",
+    "    \n",
+    "    print('\\n')\n",
     "        \n",
     "        \n",
     "#print(dfAll)\n",
